--- a/cargo.toml
+++ b/cargo.toml
@@ -18,6 +18,14 @@ serde_json = "1.0"
 # Crypto libraries
 bip39 = { version = "2.0", features = ["japanese", "korean", "spanish", "chinese-simplified", "chinese-traditional", "french", "italian", "czech", "portuguese"] }
 
+# Bitcoin - rust-bitcoin is the most battle-tested Bitcoin library in Rust
+# It includes BIP32 support internally
+bitcoin = { version = "0.31", features = ["serde", "rand"] }
+
+# Additional crypto utilities
+tiny-keccak = { version = "2.0", features = ["keccak"] }
+hex = "0.4"
+
 # Security
 rand = "0.8"
 
