--- a/cargo.toml
+++ b/cargo.toml
@@ -26,6 +26,33 @@ bitcoin = { version = "0.31", features = ["serde", "rand"] }
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 hex = "0.4"
 
+# Ed25519 for Solana, Cardano, NEAR, etc.
+ed25519-dalek = "2.1"
+
+# Blake2b for Cardano
+blake2 = "0.10"
+
+# Base58 encoding for various chains
+bs58 = "0.5"
+
+# Bech32 for Cardano and XLM
+bech32 = "0.9"
+
+# SHA256 for various chains
+sha2 = "0.10"
+
+# RIPEMD160 for XRP
+ripemd = "0.1"
+
+# Monero specific
+monero = "0.20"
+
+# CRC for XLM
+crc = "3.0"
+
+# Big number operations for base58
+num-bigint = "0.4"
+
 # Security
 rand = "0.8"
 
