--- a/cargo.toml
+++ b/cargo.toml
@@ -10,6 +10,7 @@ actix-cors = "0.7"
 
 # Async runtime
 tokio = { version = "1.35", features = ["full"] }
+async-trait = "0.1"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
