--- a/cargo.toml
+++ b/cargo.toml
@@ -33,6 +33,9 @@ ed25519-dalek = "2.1"
 # Blake2b for Cardano
 blake2 = "0.10"
 
+# Type-level numbers for Blake2b
+typenum = "1.17"
+
 # Base58 encoding for various chains
 bs58 = "0.5"
 
