--- a/cargo.toml
+++ b/cargo.toml
@@ -27,10 +27,10 @@ bitcoin = { version = "0.31", features = ["serde", "rand"] }
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 hex = "0.4"
 
-# Ed25519 for Solana, Cardano, NEAR, etc.
+# Ed25519 for Solana, NEAR, etc.
 ed25519-dalek = "2.1"
 
-# Blake2b for Cardano
+# Blake2b 
 blake2 = "0.10"
 
 # Type-level numbers for Blake2b
@@ -42,7 +42,7 @@ bs58 = "0.5"
 # Base64 encoding for TON
 base64 = "0.22"
 
-# Bech32 for Cardano and XLM
+# Bech32 for XLM
 bech32 = "0.9"
 
 # SHA256 for various chains
