--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,15 @@ hmac = "0.12"
 futures-util = "0.3"
 once_cell = "1.21.3"
 
+# gRPC dependencies
+tonic = "0.12"
+prost = "0.13"
+prost-types = "0.13"
+tokio-stream = "0.1"
+
+[build-dependencies]
+tonic-build = "0.12"
+
 [dev-dependencies]
 actix-rt = "2.9"
 reqwest = { version = "0.11", features = ["json"] }
